@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.2 2004/02/16 21:33:03 minskim Exp $
+# $NetBSD: Makefile,v 1.3 2004/12/20 11:31:02 grant Exp $
 #
 
-DISTNAME=		Scalar-List-Utils-1.13
+DISTNAME=		Scalar-List-Utils-1.14
 PKGNAME=		p5-${DISTNAME}
 SVR4_PKGNAME=		p5slu
-PKGREVISION=		1
 CATEGORIES=		misc perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=Scalar/}
 
