@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.1.1.1 2004/02/16 17:51:58 minskim Exp $
+$NetBSD: distinfo,v 1.2 2004/02/16 21:33:03 minskim Exp $
 
-SHA1 (Scalar-List-Utils-1.13.tar.gz) = a5e039e44aaa18b98524246c75b43b927d995116
-Size (Scalar-List-Utils-1.13.tar.gz) = 15703 bytes
+SHA1 (Scalar-List-Utils-1.14.tar.gz) = 5f7f19c86f1b045285770213dc4d8ba728992036
+Size (Scalar-List-Utils-1.14.tar.gz) = 15900 bytes
